@@ -8,6 +8,9 @@
           * geda_menu_item_get_toggle_size
           * geda_menu_item_get_from_menubar
 
+    * tests/test_radio_menu_item.c: Add check for function
+      geda_menu_item_get_label.
+
 2020-03-20 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_menu.c: Add ancillary variable page_size and upper
